--- a/src/app/country/pages/country-page/country-page.component.html
+++ b/src/app/country/pages/country-page/country-page.component.html
@@ -22,27 +22,27 @@
               <img [src]="country.flags.svg" alt="" class="w-8 h-8 rounded object-cover block" [alt]="country.name.common">
             </td>
             <td class="py-2 px-4 border-b border-b-gray-50">
-              Pais: <span class="text-[13px] font-medium text-gray-400">{{country?.name?.common}}</span>
+              Pais: <span class="text-[13px] font-medium text-gray-400">{{country.name.common}}</span>
             </td>
             <td class="py-2 px-4 border-b border-b-gray-50">
-              Capital: <span class="text-[13px] font-medium text-gray-400">{{country?.capital}}</span>
+              Capital: <span class="text-[13px] font-medium text-gray-400">{{country.capital}}</span>
             </td>
             <td class="py-2 px-4 border-b border-b-gray-50">
-              Población: <span class="text-[13px] font-medium text-gray-400"> {{country?.population| number}}</span>
+              Población: <span class="text-[13px] font-medium text-gray-400"> {{country.population| number}}</span>
             </td>
           </tr>
           <tr>
             <td class="py-2 px-4 border-b border-b-gray-50">
-              Traducciones: <span class="text-[13px] font-medium text-gray-400"> {{country?.translations!['ara']?.common}}</span>
+              Traducciones: <span class="text-[13px] font-medium text-gray-400"> {{country.translations['ara'].common}}</span>
             </td>
             <td class="py-2 px-4 border-b border-b-gray-50">
-              <span class="text-[13px] font-medium text-gray-400"> {{country?.translations!['urd']?.common}}</span>
+              <span class="text-[13px] font-medium text-gray-400"> {{country.translations['urd'].common}}</span>
             </td>
             <td class="py-2 px-4 border-b border-b-gray-50">
-              <span class="text-[13px] font-medium text-gray-400"> {{country?.translations!['zho']?.common}}</span>
+              <span class="text-[13px] font-medium text-gray-400"> {{country.translations['zho'].common}}</span>
             </td>
             <td class="py-2 px-4 border-b border-b-gray-50">
-              <span class="text-[13px] font-medium text-gray-400"> {{country?.translations!['per']?.common}}</span>
+              <span class="text-[13px] font-medium text-gray-400"> {{country.translations['per'].common}}</span>
             </td>
           </tr>
         </tbody>
