--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,6 +1,6 @@
 <div action="" class="p-4 border-b border-b-gray-100">
   <div class="relative w-full">
-    <input type="text" class="py-2 pr-4 pl-10 bg-gray-50 w-full outline-none border border-gray-100 rounded-md text-sm focus:border-blue-500" [placeholder]="placeholder" (keyup.enter)="emitValueIntup()" #keyword>
+    <input type="text" class="py-2 pr-4 pl-10 bg-gray-50 w-full outline-none border border-gray-100 rounded-md text-sm focus:border-blue-500" [placeholder]="placeholder" (keyup)="emitValueIntup()" #keyword>
     <i class="ri-search-line absolute top-1/2 left-4 -translate-y-1/2 text-gray-900"></i>
   </div>
 </div>
